--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,5 +2,8 @@
 unbind C-b
 set -g prefix C-a
 
+#use vim shortcuts
+setw -g mode-keys vi
+
 # reload tmux.conf
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
