--- a/.gitignore
+++ b/.gitignore
@@ -259,4 +259,4 @@ dmypy.json
 # pytype static type analyzer
 .pytype/
 
-# End of https://www.toptal.com/developers/gitignore/api/pythn,node,linuxo
+teste.sh
